color brewer license

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Bambu.js DEV</title>
   
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="colorbrewer.js"></script>
+  <script src="colorbrewer/colorbrewer.js"></script>
   <script src="bambu.js"></script>
   <script>
 
