--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         .data(data, true)
         .output('Esri')
         .type( "color" )
-        .geomType( "esriGeometryPolygon" )
+        .geomType( "esriGeometryPolyline" )
         .classification('equal_interval')
         .classes(5);
       
